turtleart.lessons.turtleart.Main.Triangle.scala.error
Source:6: error: type mismatch;
 found   : Unit
 required: Double
		gauche(a=120);
                        ^Source:7: error: type mismatch;
 found   : Unit
 required: Double
		avance(b=200);
                        ^