turtleart.lessons.turtleart.Main.Triangle.scala.code
override def run() {
	var a:Double = 0
	var b:Double = 0
	
		gauche(a=120);
		avance(b=200);
}
